<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/inmuebles"
            android:title="@string/menu_inmuebles" />
        <item
            android:id="@+id/inquilinosFragment"
            android:icon="@drawable/inquilino"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/contratosFragment"
            android:icon="@drawable/contratos"
            android:title="@string/menu_contratos"/>
        <item
            android:id="@+id/cerrarSesionFragment"
            android:icon="@drawable/cerrar"
            android:title="@string/cerrar_sesion"/>
    </group>
</menu>